# nextjs-django-instagram-sample

./: Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  app.js  app.ts  db.sqlite3  package-lock.json  package.json  pyproject.toml
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/app/migrations/: 0001_initial.py
backend/config/: config.js  config.json
backend/controllers/: accountController.ts
backend/migrations/: 20230814160807-create-account.js  20230815002149-create-account.js
backend/models/: account.js
backend/mysite/: settings.py  urls.py
backend/routes/: accountRouter.ts
backend/seeders/: 20230814154313-seed-account.js
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/actions/: auth.js  post.js
frontend/lib/: posts.js
frontend/pages/: index.js
frontend/pages/post/: new.js
frontend/pages/post/[id]/: edit.js  index.js
frontend/reducers/: auth.js  post.js
nginx/: default.conf
